# trabalho-2-metodos

./: README.md
Codigo-Fonte/: CMakeLists.txt  build.sh  cmake.sh  main.cpp  run.sh
Codigo-Fonte/include/: CMakeLists.txt  func-auxiliares.cpp  func-auxiliares.hpp  gauss-jacobi.cpp  gauss-jacobi.hpp  gauss-seidel.cpp  gauss-seidel.hpp
Executavel/: trabalho2metodos
